--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
+    "google-auth-library": "^0.12.0",
     "gulp": "^3.9.1",
     "morgan": "^1.9.0"
   }
